--- a/manifest.json
+++ b/manifest.json
@@ -1,30 +1,33 @@
 {
-  "manifest_version": 3,
-  "name": "Custom Font Changer",
-  "version": "1.0",
-  "description": "Use a custom font into the current page and toggles it on/off",
-  "permissions": [
-    "activeTab",
-    "scripting",
-    "storage",
-	"tabs"
-  ],
-  "background": {
-    "service_worker": "background.js"
-  },
-  "action": {
-    "default_title": "Custom Font",
-    "default_icon": {
-      "16": "icons/icon.png",
-      "48": "icons/icon.png",
-      "128": "icons/icon.png"
-    }
-  },
-  "options_page": "options.html",
-  "web_accessible_resources": [
-    {
-      "resources": ["styles.css", "fonts/vazirmatn.woff2", "fonts/iransans.woff2", "fonts/iransans-light.woff2", "fonts/iransans-ultra-light.woff2", "fonts/iransans-thin.woff2", "fonts/iranyekan.woff2"],
-      "matches": ["<all_urls>"]
-    }
-  ]
+ "manifest_version": 3,
+ "name": "Custom Font Changer",
+ "version": "1.0",
+ "description": "Use a custom font into the current page and toggles it on/off",
+ "permissions": [
+ "activeTab",
+ "scripting",
+ "storage",
+ "tabs"
+ ],
+ "host_permissions": [
+ "*://*/*"
+ ],
+ "background": {
+ "service_worker": "background.js"
+ },
+ "action": {
+ "default_title": "Custom Font",
+ "default_icon": {
+ "16": "icons/icon.png",
+ "48": "icons/icon.png",
+ "128": "icons/icon.png"
+ }
+ },
+ "options_page": "options.html",
+ "web_accessible_resources": [
+ {
+ "resources": ["styles.css", "fonts/vazirmatn.woff2", "fonts/iransans.woff2", "fonts/iransans-light.woff2", "fonts/iransans-ultra-light.woff2", "fonts/iransans-thin.woff2", "fonts/iranyekan.woff2"],
+ "matches": ["<all_urls>"]
+ }
+ ]
 }
